src/objects/Lease_Fund__c.object
<CustomObject>
    <fields>
        <fullName>APR__c</fullName>
        <description>APR of loan</description>
        <label>APR</label>
        <precision>11</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Active_Fund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Fund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assumed_Utility_Rate_Annual_Escalator__c</fullName>
        <label>Assumed Utility Rate Annual Escalator %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Available_Fund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available Fund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Avoided_Utility_Rate_Override__c</fullName>
        <inlineHelpText>There are Avoided Utility Rate fields on the System Design, the default is the Astrum Avoided Utility Rate unless this is filled in.</inlineHelpText>
        <label>Avoided Utility Rate Override</label>
        <picklist>
            <picklistValues>
                <fullName>NRG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunnova</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Buyout_Discount_Rate__c</fullName>
        <inlineHelpText>Used to calculate the Present Value of the buyout cost</inlineHelpText>
        <label>Buyout Discount Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_Fees__c</fullName>
        <description>Added for CPQ-685</description>
        <label>Customer Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eligible_Counties__c</fullName>
        <description>semi-colon delimited list of County, ST strings for counties that this fund can be applied to.</description>
        <label>Eligible Counties</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eligible_Leasing_Options__c</fullName>
        <label>Eligible Leasing Options</label>
        <picklist>
            <picklistValues>
                <fullName>Low-Upfront - Monthly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>One-Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Pay - Keep SRECs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-Upfront - Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-Upfront - Monthly - Keep SRECs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Pay - Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPF - Complex Rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPF - Astrum Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAC Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed-Rate PPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio PPA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Eligible_Panels__c</fullName>
        <description>Semicolon delimited values</description>
        <label>Eligible Panels</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible_States__c</fullName>
        <label>Eligible States</label>
        <picklist>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WV</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Finance_Pricing_Algorithm__c</fullName>
        <label>Finance Pricing Algorithm</label>
        <picklist>
            <picklistValues>
                <fullName>Kilowatt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liberty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OneRoof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio PPA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financing_Term_Months__c</fullName>
        <label>Financing Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fixed_Finance_Amount__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Fixed Finance Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fund_Closed_Date__c</fullName>
        <label>Fund Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fund_Open_Date__c</fullName>
        <label>Fund Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fund_Partner__c</fullName>
        <label>Fund Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lease Funds</relationshipLabel>
        <relationshipName>Lease_Funds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MInimum_Loan_Amount__c</fullName>
        <label>MInimum Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Finance_Percent_of_Price__c</fullName>
        <label>Maximum Finance % of Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maximum_Financed_Amount__c</fullName>
        <description>The maximum percentage allowed of the financed amount</description>
        <inlineHelpText>The maximum percentage allowed of the financed amount</inlineHelpText>
        <label>Maximum % Financed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maximum_Loan_Amount__c</fullName>
        <label>Maximum Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Project_Cost__c</fullName>
        <label>Maximum Project Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Term_Loan_Amount__c</fullName>
        <label>Maximum Term Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Finance_Percent_of_Price__c</fullName>
        <label>Minimum Finance % of Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimum_Project_Cost__c</fullName>
        <label>Minimum Project Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_TSRF__c</fullName>
        <label>Minimum TSRF</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimum_Term_Loan_Amount__c</fullName>
        <label>Minimum Term Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Interest_Rate__c</fullName>
        <label>Monthly Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Non_ACH_APR__c</fullName>
        <description>This field represents the APR when the customer does not select the ACH option.</description>
        <inlineHelpText>This field represents the APR when the customer does not select the ACH option.  May not be applicable to all Lease Fund Accounts.</inlineHelpText>
        <label>Non-ACH APR</label>
        <precision>11</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Non_ACH_Monthly_Interest_Rate__c</fullName>
        <description>This field represents the Monthly Interest Rate when the customer does not select the ACH option.</description>
        <inlineHelpText>This field represents the Monthly Interest Rate when the customer does not select the ACH option.  May not be applicable to all Lease Fund Accounts.</inlineHelpText>
        <label>Non-ACH Monthly Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OID__c</fullName>
        <description>Original Issue Discount</description>
        <label>OID (%)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Overproduction_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overproduction Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Production_Degradation__c</fullName>
        <defaultValue>0.5</defaultValue>
        <inlineHelpText>Default value is 0.5%</inlineHelpText>
        <label>Production Degradation</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RecordTypeDeveloperName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeDeveloperName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Finance_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Finance Record</label>
        <referenceTo>Lease_Fund__c</referenceTo>
        <relationshipLabel>Lease Funds</relationshipLabel>
        <relationshipName>Lease_Funds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_Utility_Savings_Term__c</fullName>
        <label>Required Utility Savings Term (Years)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Utility_Savings__c</fullName>
        <label>Required Utility Savings (%)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Requires_SAC_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires SAC Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sighten_Product_uuid__c</fullName>
        <description>Contains the uuid for the product in the Sighten system</description>
        <externalId>true</externalId>
        <label>Sighten Product uuid</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Buyout_Basis_EPC__c</fullName>
        <inlineHelpText>Used to store State and $/w combinations for determining the Basis in Contract Termination Costs</inlineHelpText>
        <label>System Buyout Basis EPC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lease Fund</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RecordTypeDeveloperName__c</columns>
        <columns>NAME</columns>
        <columns>Active_Fund__c</columns>
        <columns>Available_Fund__c</columns>
        <columns>Related_Finance_Record__c</columns>
        <columns>Fund_Open_Date__c</columns>
        <columns>Fund_Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Aux</fullName>
        <columns>NAME</columns>
        <columns>Active_Fund__c</columns>
        <columns>Available_Fund__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_Fund__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Aux</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CurrentOfferings</fullName>
        <booleanFilter>(1 AND 2) or (1 and 3)</booleanFilter>
        <columns>RecordTypeDeveloperName__c</columns>
        <columns>NAME</columns>
        <columns>Active_Fund__c</columns>
        <columns>Available_Fund__c</columns>
        <columns>Related_Finance_Record__c</columns>
        <columns>Fund_Open_Date__c</columns>
        <columns>Fund_Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fund_Open_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Fund_Closed_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Fund_Closed_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Current Offerings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sunlight</fullName>
        <columns>RecordTypeDeveloperName__c</columns>
        <columns>NAME</columns>
        <columns>Active_Fund__c</columns>
        <columns>Available_Fund__c</columns>
        <columns>Related_Finance_Record__c</columns>
        <columns>Fund_Open_Date__c</columns>
        <columns>Fund_Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Sunlight</value>
        </filters>
        <label>Sunlight</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Lease Fund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lease Funds</pluralLabel>
    <recordTypes>
        <fullName>Lease</fullName>
        <active>true</active>
        <description>Lease Funding Record</description>
        <label>Lease</label>
    </recordTypes>
    <recordTypes>
        <fullName>PPA</fullName>
        <active>true</active>
        <description>PPA Funding Record</description>
        <label>PPA</label>
    </recordTypes>
    <recordTypes>
        <fullName>SAC_Loan</fullName>
        <active>true</active>
        <description>SAC Loan Funding Record</description>
        <label>SAC Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Term_Loan</fullName>
        <active>true</active>
        <description>Term Loan Funding Record</description>
        <label>Term Loan</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>